# store

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
examples/: CMakeLists.txt  basic_store.cpp  recovery_demo.cpp  wal_usage.cpp
include/softadastra/store/core/: Entry.hpp  Operation.hpp  StoreConfig.hpp
include/softadastra/store/encoding/: OperationDecoder.hpp  OperationEncoder.hpp
include/softadastra/store/engine/: ApplyResult.hpp  StoreEngine.hpp
include/softadastra/store/index/: InMemoryIndex.hpp  IndexEntry.hpp
include/softadastra/store/snapshot/: SnapshotBuilderStore.hpp  SnapshotStore.hpp
include/softadastra/store/types/: Key.hpp  OperationType.hpp  Value.hpp
include/softadastra/store/utils/: Serializer.hpp
src/core/: Entry.cpp  Operation.cpp  StoreConfig.cpp
src/encoding/: OperationDecoder.cpp  OperationEncoder.cpp
src/engine/: ApplyResult.cpp  StoreEngine.cpp
src/index/: InMemoryIndex.cpp  IndexEntry.cpp
src/persistence/: SnapshotStore.cpp
src/snapshot/: SnapshotBuilderStore.cpp  SnapshotStore.cpp
src/utils/: Serializer.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_index.cpp  test_operation.cpp  test_recovery.cpp
